# rust-test

./: .env  Cargo.toml  Makefile.toml  request.http
migrations/: 20220214170308_init.sql
src/: main.rs
src/modules/: mod.rs
src/modules/health/: mod.rs  routes.rs  services.rs  test.rs
src/modules/shared/models/entities/: user.rs
src/modules/shared/models/enums/: mod.rs  repositories_enum.rs
src/modules/shared/repositories/: memory_repository.rs  mod.rs  postgres_repository.rs  repository.rs  test.rs  user_repository.rs
src/modules/user/v1/: mod.rs  routes.rs
