[package]
name = "actix-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.3"
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "json"] }
tracing-futures = "0.2"
sqlx = {version = "0.5", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"]}

[dev-dependencies]
actix-rt = "2"
mockall = "0.11.0"
